day-9/ingress-6.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: giropops-senhas-site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  #- host: 
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: giropops-senhas 
            port: 
              number: 5000
